--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1522,18 +1522,17 @@ button.btn-before-none::before,
     caret-color: #dddddd;
 }
 
-.phone-form-group .iti {
+.iti {
     width: 100%;
-    margin-bottom: 1.3rem;
     border-radius: 5px;
 }
 
-.phone-form-group .iti .iti__flag-container {
+.iti .iti__flag-container {
     padding: 0;
 }
 
-.phone-form-group .iti .iti__flag-container,
-.phone-form-group .iti .iti__flag-container .iti__selected-flag {
+.iti .iti__flag-container,
+.iti .iti__flag-container .iti__selected-flag {
     border-bottom-left-radius: 5px;
     border-top-left-radius: 5px;
 }
@@ -1821,6 +1820,7 @@ button.btn-before-none::before,
     height: 36px;
     border: 3px solid #ffffff;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 .profile-img img {
@@ -2396,4 +2396,350 @@ input[type=checkbox]:checked+.check-box::before,
     .home-slider {
         padding: 120px 15px 100px 20px;
     }
+}
+
+
+.uppy-Root *:focus {
+    outline: none !important;
+}
+
+.uppy-size--md .uppy-DashboardItem-progressIndicator,
+.uppy-DashboardContent-bar .uppy-DashboardContent-back {
+    visibility: hidden;
+    opacity: 0;
+}
+
+.uppy-Dashboard-inner {
+    width: 100% !important;
+    height: 100% !important;
+}
+
+.uppy-Root {
+    height: 100% !important;
+}
+
+.uppy-DashboardContent-addMore svg {
+    margin-bottom: 0;
+}
+
+.card-file {
+    padding: 8px;
+    position: relative;
+    border-color: rgb(223, 224, 228);
+    transition: all 0.2s ease-in-out;
+    margin-bottom: 20px;
+}
+
+.card-file .card-body h6 {
+    font-size: 0.8rem;
+    margin-bottom: 0;
+}
+
+.card-file .card-body p {
+    margin-bottom: 0;
+    font-size: 9px;
+    color: #8392a5;
+}
+
+.card-file .card-file-thumb {
+    height: 120px;
+    background-color: #f5f6fa;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card-file .card-body {
+    padding: 10px 0 0;
+}
+
+.card-file .card-file-thumb i {
+    font-size: 50px;
+    color: #b3becc;
+}
+
+.aiz-uploader-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1040;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+[data-toggle="aizuploader"] {
+    cursor: pointer;
+}
+
+.aiz-uploader-all {
+    margin-left: -10px;
+    margin-right: -10px;
+    overflow-y: auto;
+    height: calc(100vh - 303px);
+}
+
+.uppy-Dashboard-files {
+    max-height: calc(100vh - 363px);
+}
+
+.aiz-file-box-wrap {
+    padding: 0 10px;
+    width: 50%;
+    float: left;
+}
+
+.aiz-file-box-wrap[aria-hidden="true"] {
+    display: none;
+}
+
+.aiz-file-box {
+    position: relative;
+}
+
+.aiz-file-box:before {
+    content: "";
+    display: block;
+    padding-top: 100%;
+}
+
+.aiz-file-box .dropdown-file {
+    position: absolute;
+    top: 6px;
+    right: 9px;
+    z-index: 1;
+}
+
+.aiz-file-box .dropdown-file>a {
+    color: #5a5a5a;
+    font-size: 22px;
+    background: #f5f6fa;
+    cursor: pointer;
+}
+
+.aiz-file-box .card-file {
+    cursor: pointer;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 1;
+}
+
+.aiz-file-box .card-file .card-file-thumb {
+    position: absolute;
+    width: calc(100% - 16px);
+    top: 8px;
+    left: 8px;
+    height: calc(100% - 55px);
+}
+
+.aiz-file-box .card-file .card-body {
+    position: absolute;
+    width: calc(100% - 16px);
+    bottom: 5px;
+    left: 8px;
+}
+
+[data-selected="true"] .aiz-uploader-select {
+    border-color: #007bff;
+    background: rgba(0, 123, 255, 0.05);
+}
+
+.modal-adaptive {
+    height: calc(100vh - 60px);
+    margin: 30px auto !important;
+}
+
+@media (min-width: 576px) {
+
+    /*sm*/
+    .modal-adaptive {
+        max-width: 540px;
+    }
+
+    .aiz-file-box-wrap {
+        width: 33.3333%;
+    }
+}
+
+@media (min-width: 768px) {
+
+    /*md*/
+    .modal-adaptive {
+        max-width: 720px;
+    }
+
+    .aiz-file-box-wrap {
+        width: 25%;
+    }
+
+    .modal-md {
+        max-width: 600px;
+    }
+}
+
+@media (min-width: 992px) {
+
+    /*lg*/
+    .modal-adaptive {
+        max-width: 960px;
+    }
+
+    .aiz-file-box-wrap {
+        width: 20%;
+    }
+}
+
+@media (min-width: 1200px) {
+
+    /*xl*/
+    .modal-adaptive {
+        max-width: 1140px;
+    }
+
+    .aiz-file-box-wrap {
+        width: 16.66666%;
+    }
+}
+
+@media (min-width: 1500px) {
+
+    /*xxl*/
+    .modal-adaptive {
+        max-width: 1400px;
+    }
+}
+
+/*modal*/
+.modal.website-popup {
+    display: block;
+}
+
+.modal-open .modal {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
+.modal-backdrop {
+    background-color: #11151d;
+}
+
+.modal-content {
+    border: 1px solid rgba(20, 20, 35, 0.2);
+}
+
+.modal-content .modal-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    position: relative;
+    padding: 12px 25px;
+    border-bottom: 1px solid #ebedf2;
+    min-height: 60px;
+    background-color: transparent;
+}
+
+.modal-header .close {
+    font-size: 0;
+}
+
+.modal-header .close:before {
+    font-family: "Line Awesome Free";
+    font-weight: 900;
+    content: "\f00d";
+    font-size: 20px;
+}
+
+.modal-content .modal-body {
+    padding: 20px 25px;
+    overflow-y: auto;
+    max-height: 70vh;
+}
+
+@media (min-width: 768px) {
+    .modal-content .modal-body {
+        max-height: 80vh;
+    }
+}
+
+.modal-content .modal-footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    position: relative;
+    padding: 10px 25px;
+    border-top: 1px solid #ebedf2;
+    min-height: 60px;
+    background-color: transparent;
+}
+
+.modal.fade .modal-dialog.modal-dialog-zoom {
+    -webkit-transform: translate(0, 0) scale(0.8);
+    transform: translate(0, 0) scale(0.8);
+    transition: -webkit-transform 0.3s ease-out;
+    transition: transform 0.3s ease-out;
+    transition: transform 0.3s ease-out, -webkit-transform 0.3s ease-out;
+}
+
+.modal.show .modal-dialog.modal-dialog-zoom {
+    -webkit-transform: translate(0, 0) scale(1);
+    transform: translate(0, 0) scale(1);
+}
+
+.modal.modal-static .modal-dialog.modal-dialog-zoom {
+    -webkit-transform: scale(1.02);
+    transform: scale(1.02);
+}
+
+.modal.fade .modal-dialog-right {
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    height: 100%;
+    margin: 0;
+    width: 400px;
+    max-width: 80vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: column nowrap;
+    flex-flow: column nowrap;
+    background-color: #fff;
+    -ms-flex-line-pack: center;
+    align-content: center;
+    -webkit-transform: translate(50px, 0);
+    transform: translate(50px, 0);
+}
+
+.modal.show .modal-dialog-right {
+    -webkit-transform: translate(0px, 0);
+    transform: translate(0px, 0);
+}
+
+.modal-dialog-right .modal-content {
+    height: 100%;
+    border: 0;
+    border-radius: 0;
+}
+
+.modal-dialog-right .modal-body {
+    max-height: 86vh;
 }
