- Done view notification list (view only un read notification) - Onclick on order No, view its details from notification list - Remove / Mark Notification as read done

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2766,3 +2766,7 @@ input[type=checkbox]:checked+.check-box::before,
 .modal-dialog-right .modal-body {
     max-height: 86vh;
 }
+
+.notification_a {
+    color: #e62e04 !important;
+}
