- email change functionality in profile

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -455,6 +455,10 @@ li {
     font-weight: 500;
 }
 
+h4.act-price .currency-symbol {
+    color: #4883e5;
+}
+
 h4 .act-price.currency-symbol {
     font-size: 1.45rem !important;
 }
