- [Point 51] Design change of Pay From box in cart detail is not done

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2774,3 +2774,8 @@ input[type=checkbox]:checked+.check-box::before,
 .notification_a {
     color: #e62e04 !important;
 }
+
+.cart_wallet_bal {
+    font-size: 12px !important;
+    padding-left: 25px !important;;
+}
