- [Point 40] - Done user can buy product from one community at a time Continue shopping button should redirect to community home page

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2783,3 +2783,8 @@ input[type=checkbox]:checked+.check-box::before,
     font-size: 12px !important;
     padding-left: 25px !important;;
 }
+
+
+.btn-no {
+    padding: 9px 20px;
+}
