Tags added in product card

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2784,6 +2784,16 @@ input[type=checkbox]:checked+.check-box::before,
     padding-left: 25px !important;;
 }
 
+.item-tags {
+    overflow-x: auto;
+}
+
+.item-tags li {
+    margin: 0;
+    padding: 5px 15px;
+    white-space: nowrap;
+    margin: auto;
+}
 
 .btn-no {
     padding: 9px 20px;
