--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -659,6 +659,7 @@ footer .footer-nav a {
 }
 
 .home-slider {
+    background-image: url(../img/home-slider-bg.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -672,51 +673,19 @@ footer .footer-nav a {
     width: 100%;
 }
 
-.home-slider .slider-content h4 {
-    color: #525252;
-}
-
-.home-slider .slider-content p {
-    color: #606060;
-}
-
 .home-slider .slider-content .explore-card {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
+    max-width: 200px;
+    padding: 15px 20px;
     border-radius: 4px;
-    border-left: 6px solid var(--primary-color);
+    border-left: 4px solid var(--primary-color);
     box-shadow: 0 6px 30px -10px #686868;
     z-index: 1;
     background: #fff;
 }
 
-.home-slider .slider-content .explore-card p {
-    color: var(--primary-color-dark);
-}
-
+.home-slider .slider-content .explore-card:hover,
 .home-slider .slider-content .explore-card:hover i {
     color: var(--primary-color);
-}
-
-.home-slider .slider-content .sl-social-icons i {
-    font-size: 25px;
-    border-radius: 50%;
-    line-height: 38px !important;
-    height: 40px;
-    width: 40px;
-    border: 1px solid var(--default-color-light);
-    text-align: center;
-    transition: all 0.2s ease-in-out;
-}
-
-.home-slider .slider-content .sl-social-icons i:hover {
-    color: #fff;
-    border: transparent;
-    background: linear-gradient(0deg, #ee588e, #bcbc5c, #27d43a);
-    box-shadow: 0 6px 15px -3px #909090;
-    transform: translateY(-3px);
 }
 
 .cart-icon span {
@@ -756,22 +725,24 @@ main.main-tag-mt-sm {
 }
 
 /* Home Page */
-.community-creat {
-    border-radius: 15px;
-    box-shadow: 0 6px 15px -3px #bdbdbd;
+.community-create {
+    background-image: url(../img/community-bg.png);
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;    
 }
 
-.community-creat button {
+.community-create button {
     background: #fff;
     font-weight: 600;
 }
 
-.community-creat button:hover {
+.community-create button:hover {
     box-shadow: 0 7px 10px -5px #555555;
 }
 
 button.btn-before-none::before,
-.community-creat button::before {
+.community-create button::before {
     content: none;
 }
 
@@ -2343,24 +2314,26 @@ input[type=checkbox]:checked+.check-box::before,
     }
 }
 
+@media screen and (min-width: 576px) and (max-width: 767px) {
+    .slider-content p {
+        max-width: 280px;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .ord-item-card .delivery-status .status {
         max-width: 140px;
         font-size: 0.82rem !important;
     }
+
+    .slider-content h1 {
+        font-size: 2rem;
+    }
 }
 
 @media screen and (min-width: 992px) {
     .home-slider {
-        padding: 90px 15px 60px;
-    }
-
-    .slider-1 {
-        background-image: url(../img/slider-1.webp);
-    }
-
-    .slider-2 {
-        background-image: url(../img/slider-2.webp);
+        padding: 100px 15px;
     }
 
     .breadcrumbs.high {
@@ -2370,10 +2343,6 @@ input[type=checkbox]:checked+.check-box::before,
 
     main.main-tag {
         margin-top: 87px !important;
-    }
-
-    .home-slider .slider-content .explore-card {
-        width: calc(100% + 30px);
     }
 
     .filter-card,
@@ -2401,35 +2370,7 @@ input[type=checkbox]:checked+.check-box::before,
     }
 
     .home-slider {
-        padding: 40px 0;
-    }
-
-    .slider-1 {
-        background-image: url(../img/slider-11.webp);
-    }
-
-    .slider-2 {
-        background-image: url(../img/slider-22.webp);
-    }
-
-    .home-slider .slider-content {
-        background: #00000075;
-        border-radius: 15px;
-        padding: 30px 25px !important;
-    }
-
-    .home-slider .slider-content h4,
-    .home-slider .slider-content p {
-        color: #ffffff;
-    }
-
-    .home-slider .slider-content .explore-card {
-        padding: 3px 20px;
-    }
-
-    .home-slider .slider-content .sl-social-icons i {
-        border-color: #fff;
-        color: #fff;
+        padding: 80px 10px;
     }
 
     .nxtdelivery-date {
@@ -2477,7 +2418,7 @@ input[type=checkbox]:checked+.check-box::before,
 
 @media screen and (min-width: 1200px) {
     .home-slider {
-        padding: 100px 15px 80px;
+        padding: 160px 16px;
     }
 }
 
@@ -2489,7 +2430,7 @@ input[type=checkbox]:checked+.check-box::before,
 
 @media screen and (min-width: 1440px) {
     .home-slider {
-        padding: 120px 15px 100px 20px;
+        padding: 140px 20px;
     }
 }
 
