--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -608,6 +608,7 @@ header .cart-icon i {
 
 .sideNav .nav-menu {
     position: fixed;
+    top: 0;
     left: -300px;
     z-index: 99999;
     background: #fff;
