--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -695,7 +695,7 @@ footer .footer-nav a {
 }
 
 .home-slider .slider-content .explore-card {
-    max-width: 200px;
+    max-width: 265px;
     padding: 15px 20px;
     border-radius: 4px;
     border-left: 4px solid var(--primary-color);
@@ -748,7 +748,7 @@ main.main-tag-mt-sm {
 /* Home Page */
 .community-create {
     background-image: url(../img/community-bg.png);
-    background-position: right;
+    background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -2668,7 +2668,7 @@ input[type=checkbox]:checked+.check-box::before,
 
     .slider-content {
         padding: 0 25px;
-        background: #ffffff80;
+        background: #ffffffde;
         border-radius: 15px;
     }
 }
