--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1478,6 +1478,7 @@ button.btn-before-none::before,
     width: 100%;
     background-color: #fff;
     box-shadow: 0 2px 10px 0px #d1d1d1;
+    z-index: 99;
 }
 
 .user-data {
