--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -38,6 +38,10 @@
     color: var(--primary-color);
 }
 
+.primary-color-dark {
+    color: var(--primary-color-dark);
+}
+
 .secondary-color {
     color: var(--secondary-color);
 }
@@ -719,6 +723,14 @@ footer .footer-nav a {
     color: var(--primary-color);
 }
 
+.home-slider i.fa-smile-wink {
+    font-size: 1.25rem;
+}
+
+.home-slider p.sub-txt {
+    line-height: 1.6 !important;
+}
+
 .cart-icon span {
     position: absolute;
     background: #fde8e0;
@@ -835,6 +847,10 @@ button.btn-before-none::before,
     border: 3px solid #fff;
 }
 
+.community-card .card-data p {
+    min-height: 1.19rem;
+}
+
 .view-more-btn {
     border: 2px solid #ddd;
     color: #5f5f5f;
@@ -888,8 +904,8 @@ button.btn-before-none::before,
 }
 
 .icons3D {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 80px;
     margin: auto;
     display: flex;
     align-items: center;
