- partial payment using wallet and razorpay UI changes

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -3063,8 +3063,8 @@ input[type=checkbox]:checked+.check-box::before,
     text-decoration: line-through;
 }
 
-.total h5 {
-    font-size: 1.15rem;
+.total span.h5 {
+    font-size: 1.15rem !important;
 }
 
 .total .strikethrough {
