--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -957,7 +957,7 @@ button.btn-before-none::before,
     margin-right: 28px;
 }
 
-.filter-card .filter-list input[type="checkbox"]+.box:after {
+.filter-card .filter-list input[type="checkbox"] + .box:after {
     position: absolute;
     left: 4px;
     top: 3px;
@@ -971,12 +971,12 @@ button.btn-before-none::before,
     z-index: 200;
 }
 
-.filter-card .filter-list input[type="checkbox"]:checked+.box:after {
+.filter-card .filter-list input[type="checkbox"]:checked + .box:after {
     background-color: transparent;
     border-color: var(--primary-color);
 }
 
-.filter-card .filter-list input[type="checkbox"]:checked+.box:before {
+.filter-card .filter-list input[type="checkbox"]:checked + .box:before {
     transform: rotate(45deg);
     position: absolute;
     left: 13px;
@@ -2122,7 +2122,7 @@ button.btn-before-none::before,
     display: none;
 }
 
-.switch-input:checked+.switch-label {
+.switch-input:checked + .switch-label {
     color: #fff;
     text-shadow: 0 1px rgba(255, 255, 255, 0.25);
     -webkit-transition: 0.15s ease-out;
@@ -2137,17 +2137,17 @@ button.btn-before-none::before,
     transition-property: color, text-shadow;
 }
 
-.switch-input:checked+.switch-label-in~.switch-selection {
+.switch-input:checked + .switch-label-in ~ .switch-selection {
     left: 0;
     /* Note: left: 50%; doesn't transition in WebKit */
 }
 
-.switch-input:checked+.switch-label-in~.switch-selection {
+.switch-input:checked + .switch-label-in ~ .switch-selection {
     left: 33.3%;
     /* Note: left: 50%; doesn't transition in WebKit */
 }
 
-.switch-input:checked+.switch-label-out~.switch-selection {
+.switch-input:checked + .switch-label-out ~ .switch-selection {
     left: 66.6%;
     /* Note: left: 50%; doesn't transition in WebKit */
 }
@@ -2351,12 +2351,12 @@ input[type=checkbox] {
     transform: rotate(-45deg);
 }
 
-input[type=checkbox]:checked+.check-box,
+input[type=checkbox]:checked + .check-box,
 .check-box.checked {
     border-color: var(--primary-color-dark);
 }
 
-input[type=checkbox]:checked+.check-box::after,
+input[type=checkbox]:checked + .check-box::after,
 .check-box.checked::after {
     height: 8px;
     -moz-animation: dothabottomcheck 0.4s ease 0s forwards;
@@ -2365,7 +2365,7 @@ input[type=checkbox]:checked+.check-box::after,
     animation: dothabottomcheck 0.4s ease 0s forwards;
 }
 
-input[type=checkbox]:checked+.check-box::before,
+input[type=checkbox]:checked + .check-box::before,
 .check-box.checked::before {
     height: 15px;
     -moz-animation: dothatopcheck 0.3s ease 0s forwards;
@@ -2408,7 +2408,7 @@ input[type=checkbox]:checked+.check-box::before,
 }
 
 /* if any input is checked, make its following siblings grey */
-.rating__input:checked~.rating__label .rating__icon--star {
+.rating__input:checked ~ .rating__label .rating__icon--star {
     color: #ddd;
 }
 
@@ -2418,20 +2418,19 @@ input[type=checkbox]:checked+.check-box::before,
 }
 
 /* make hovered input's following siblings grey on hover */
-.rating__input:hover~.rating__label .rating__icon--star {
+.rating__input:hover ~ .rating__label .rating__icon--star {
     color: #ddd;
 }
 
 /* make none icon grey on rating group hover */
-.rating-group:hover .rating__input--none:not(:hover)+.rating__label .rating__icon--none {
+.rating-group:hover .rating__input--none:not(:hover) + .rating__label .rating__icon--none {
     color: #eee;
 }
 
 
-
 /* ----------- Media Queries ----------- */
 
-@media screen and (max-width:360px) {
+@media screen and (max-width: 360px) {
     .item-card .card-top {
         padding: 0 9px;
     }
@@ -2508,7 +2507,7 @@ input[type=checkbox]:checked+.check-box::before,
     }
 }
 
-@media screen and (max-width:420px) {
+@media screen and (max-width: 420px) {
     .thankyou-card {
         padding: 30px 18px;
         border-radius: 15px;
@@ -2600,7 +2599,7 @@ input[type=checkbox]:checked+.check-box::before,
         transition: none;
     }
 
-    .breadcrumbs.sticky+.content {
+    .breadcrumbs.sticky + .content {
         padding-top: 96px;
     }
 
@@ -2749,7 +2748,7 @@ input[type=checkbox]:checked+.check-box::before,
     z-index: 1;
 }
 
-.aiz-file-box .dropdown-file>a {
+.aiz-file-box .dropdown-file > a {
     color: #5a5a5a;
     font-size: 22px;
     background: #f5f6fa;
@@ -3020,8 +3019,7 @@ input[type=checkbox]:checked+.check-box::before,
 
 .cart_wallet_bal {
     font-size: 12px !important;
-    padding-left: 25px !important;
-    ;
+    padding-left: 25px !important;;
 }
 
 
@@ -3105,8 +3103,14 @@ input[type=checkbox]:checked+.check-box::before,
     min-width: 80px
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-width: 480px) {
     .pwaPopup {
         justify-content: ;
     }
+}
+
+.safari_share {
+    height: 16px;
+    width: 16px;
+    margin-top: -5px;
 }
