--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -922,12 +922,26 @@ button.btn-before-none::before,
     border-radius: 12px;
     box-shadow: 0 10px 15px -5px #e6e6e6;
     margin-top: -30px;
-    display: none;
+    /*display: none;*/
+}
+
+.srch-fltr-card .item-tags {
+    padding: 10px;
+    overflow: scroll;
+}
+
+.srch-fltr-card .item-tags li {
+    font-size: 0.65rem !important;
+}
+
+.srch-fltr-card .item-tags .active_filter {
+    color: #FFFFFF;
+    background: var(--gray-dark);
 }
 
 .filter-card .filter-list ul {
     max-height: 70vh;
-    overflow-y: auto;
+    overflow: auto;
 }
 
 .filter-card .filter-list li {
