--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -931,6 +931,8 @@ button.btn-before-none::before,
 }
 
 .srch-fltr-card .item-tags li {
+    text-align: center;
+    min-width: 20%;
     font-size: 0.65rem !important;
 }
 
