- Done product replacement functionality - If no products then show no product found image

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -330,6 +330,10 @@ h6 {
     font-weight: bolder !important;
 }
 
+.fsize10{
+    font-size: 10px !important;
+}
+
 .fsize11,
 .x-tiny-text {
     font-size: 11px !important;
